<resources>
    <string name="app_name">回头客商家端</string>
    <string name="login">登录</string>
    <string name="forgetPass">忘记密码?</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_account">账户名</string>
    <string name="hint_passWord">密码</string>
    <string name="hint_authCode">请输入验证码</string>
    <string name="authCode">验证码</string>
    <string name="hint_pass_again">请再次输入新密码</string>
    <string name="over">完成</string>
    <string name="untreated">未处理</string>
    <string name="hastreated">已处理</string>
    <string name="manage">管理</string>
    <string name="setting">设置</string>
    <string name="voice">铃音设置</string>
    <string name="voice_women">女声提示音</string>
    <string name="voice_men">男声提示音</string>
    <string name="zhendong">提示震动</string>
    <string name="call">联系市场经理</string>
    <string name="call_service">联系客服</string>
    <string name="feed_back">给我们建议</string>
    <string name="exit">退出登录</string>
    <string name="version">当前版本</string>
    <string name="home">home</string>
    <string name="splash">splash</string>
    <string name="playing">开店营业</string>
    <string name="update">更新版本</string>
    <string name="versoion">版本更新</string>

    <string name="empty_no_data">没有数据</string>
    <string name="error">出错了</string>
    <string name="error_change">请求失败</string>


    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

</resources>
