<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBack"
    android:orientation="vertical">


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@color/colorMain" />


    <include layout="@layout/include_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <EditText
            android:id="@+id/account_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nulls"
            android:hint="@string/hint_account"
            style="@style/blank16"
            android:maxLength="11"
            android:padding="10dp"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLine" />


        <EditText
            android:id="@+id/passWord_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/blank16"
            android:background="@drawable/nulls"
            android:hint="@string/hint_passWord"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="10dp"
            android:singleLine="true" />


    </LinearLayout>


    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        style="@style/white18"
        android:padding="10dp" />


    <TextView
        android:id="@+id/forgetpass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/forgetPass"
        style="@style/blue16"
        android:layout_margin="15dp"
        />


</LinearLayout>
