<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBack"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorMain">


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/head_sdv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            fresco:placeholderImage="@mipmap/head_default"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:roundAsCircle="true" />


        <TextView
            android:id="@+id/phoneNumber"
            style="@style/white16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/head_sdv"
            android:text=""
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_state"
            style="@style/white14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/head_sdv"
            android:text="" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_rest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/playing" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/playing_sc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/colorGrayBack" />

    <RelativeLayout
        android:id="@+id/voice_mark_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/voice" />


        <TextView
            android:id="@+id/jt_text"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_jt" />

        <TextView
            android:id="@+id/voice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/jt_text"
            android:text="@string/voice_women"
            android:textSize="16dp" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/colorGrayBack" />


    <RelativeLayout
        android:id="@+id/zhendong_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">


        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/zhendong" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/zhendong_sc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/call_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/call" />


        <TextView
            android:id="@+id/jt1_text"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_jt" />

        <TextView
            android:id="@+id/call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/jt1_text"
            android:text="王小虎"
            android:textSize="16dp" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/colorGrayBack" />

    <RelativeLayout
        android:id="@+id/call_service_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/call_service" />


        <TextView
            android:id="@+id/jt2_text"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_jt" />

        <TextView
            android:id="@+id/call_service_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/jt2_text"
            android:text=""
            android:textSize="16dp" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/colorGrayBack" />

    <RelativeLayout
        android:id="@+id/feed_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/feed_back" />


        <TextView
            android:id="@+id/jt3_text"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_jt" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/version_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <TextView
            style="@style/blank14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/version" />


        <TextView
            android:id="@+id/jt4_text"
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_jt" />


        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/jt4_text"
            android:text="1.0.0.1"
            android:textSize="16dp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/exit_text"
        style="@style/red16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/exit" />


</LinearLayout>
</ScrollView>